--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <label for="today">Today</label>
                 <input type="radio" id="today" name="day" value="0" checked>
                 <br>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" class="mx-auto">
             </form>
             <div id="graph" class="">
                 <img src="lsd.png">
