--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
                 <input type="radio" id="yesterday" name="day" value="-1">
                 <label for="today">Today</label>
                 <input type="radio" id="today" name="day" value="0" checked>
-                <br>
-                <input type="submit" value="Submit" class="mx-auto">
+                <div style="text-align: center;">
+                    <input type="submit" value="Submit" >
+                </div>
             </form>
             <div id="graph" class="">
                 <img src="lsd.png">
