--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <form id="startForm" class="mx-auto">
                 <label for="start">Start Time:</label>
                 <input type="time" id="start" name="start">
-                <label for="yesterday">Yesterday</label>
+                <label for="yesterday">Yesterday:</label>
                 <input type="radio" id="yesterday" name="day" value="-1">
-                <label for="today">Today</label>
+                <label for="today">Today:</label>
                 <input type="radio" id="today" name="day" value="0" checked>
                 <div style="text-align: center;">
                     <input type="submit" value="Submit" >
