--- a/index.html
+++ b/index.html
@@ -7,36 +7,41 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <script src="index.js"></script>
     </head>
+
     <body class="bg-light">
-        <div class="card mx-auto mt-3 pt-3">
+        <div class="card mx-auto mt-3 pt-3 pb-3">
             <form id="startForm" class="mx-auto">
                 <label for="start">Start Time:</label>
                 <input type="time" id="start" name="start">
+
                 <label for="yesterday">Yesterday:</label>
                 <input type="radio" id="yesterday" name="day" value="-1">
+
                 <label for="today">Today:</label>
                 <input type="radio" id="today" name="day" value="0" checked>
+
                 <div style="text-align: center;">
                     <input type="submit" value="Submit" >
                 </div>
             </form>
-            <div id="graph" class="">
+            <div id="graph">
                 <img src="lsd.png">
+
                 <div id="line" style="left:123px;"></div>
-                    <p style="right:846px">0</p>
-                    <p style="right:779px">1</p>
-                    <p style="right:710px">2</p>
-                    <p style="right:640px">3</p>
-                    <p style="right:572px">4</p>
-                    <p style="right:503px">5</p>
-                    <p style="right:434px">6</p>
-                    <p style="right:365px">7</p>
-                    <p style="right:296px">8</p>
-                    <p style="right:227px">9</p>
-                    <p style="right:158px">10</p>
-                    <p style="right:88px">11</p>
-                    <p style="right:18px">12</p>
-                    
+
+                <p style="right:846px">0</p>
+                <p style="right:779px">1</p>
+                <p style="right:710px">2</p>
+                <p style="right:640px">3</p>
+                <p style="right:572px">4</p>
+                <p style="right:503px">5</p>
+                <p style="right:434px">6</p>
+                <p style="right:365px">7</p>
+                <p style="right:296px">8</p>
+                <p style="right:227px">9</p>
+                <p style="right:158px">10</p>
+                <p style="right:88px">11</p>
+                <p style="right:18px">12</p>
             </div>
         </div>
     
